# agent-sdk

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  README_EN.md  architecture.md  test_ollama_reasoning.sh
doc/: OpenCode核心架构分析.md  Qwen_OAuth_集成指南.md
examples/: agent_cli.cpp  api_test.cpp  cli.cpp  ollama_test.cpp  qwen_oauth_example.cpp  qwen_oauth_test.cpp  simple_chat.cpp  test_reasoning.cpp  test_working_dir.cpp  tool_test.cpp  tui_components.hpp
include/agent/: agent.hpp
include/agent/bus/: bus.hpp
include/agent/core/: config.hpp  message.hpp  types.hpp  uuid.hpp
include/agent/llm/: anthropic.hpp  provider.hpp
include/agent/net/: http_client.hpp  sse_client.hpp
include/agent/session/: session.hpp
include/agent/tool/: tool.hpp
include/agent/tool/builtin/: builtins.hpp
src/agent/: agent.cpp  agent.hpp
src/bus/: bus.cpp  bus.hpp
src/core/: config.cpp  config.hpp  json_store.cpp  json_store.hpp  message.cpp  message.hpp  types.cpp  types.hpp  uuid.cpp  uuid.hpp  version.hpp
src/llm/: anthropic.cpp  anthropic.hpp  ollama.cpp  ollama.hpp  openai.cpp  openai.hpp  provider.cpp  provider.hpp  qwen.cpp  qwen.hpp  qwen_oauth.cpp  qwen_oauth.hpp
src/log/: log.cpp  log.h
src/mcp/: client.cpp  transport.cpp
src/net/: http_client.cpp  http_client.hpp  sse_client.cpp  sse_client.hpp
src/plugin/: auth_provider.cpp  auth_provider.hpp  qrcode.cpp  qrcode.hpp
src/plugin/qwen/: qwen_oauth.cpp  qwen_oauth.hpp
src/session/: compaction.cpp  processor.cpp  prompt.cpp  session.cpp  session.hpp  truncate.cpp
src/skill/: skill.cpp
src/tool/: permission.cpp  registry.cpp  tool.cpp  tool.hpp
src/tool/builtin/: bash.cpp  builtins.hpp  question.cpp  read.cpp  skill.cpp  task.cpp
tests/: test_agent_cli.cpp  test_config.cpp  test_json_store.cpp  test_llm.cpp  test_mcp.cpp  test_message.cpp  test_plugin_auth.cpp  test_qwen_integration.cpp  test_session.cpp  test_skill.cpp  test_tool.cpp
tui/: agent_cli.cpp  tui_callbacks.cpp  tui_components.cpp  tui_components.h  tui_event_handler.cpp  tui_render.cpp  tui_render.h  tui_state.h
